[package]
name = "fqnovel-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.86"
libaes = "0.7.0"
hex = "0.4.3"
reqwest = { version = "0.12.7", features = ["json"] }
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
base64 = "0.22.1"
flate2 = "1.0"
axum = "0.7.7"
axum-extra = "0.9.4"
tracing-subscriber = "0.3.18"
